# notmuch-avatar

./: README.md  refresh  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
avatar/: __init__.py  emailtools.py  main.py
avatar/sources/: favico.py  google.py  gravatar.py  local.py
tests/: test_emailtools.py
