[metadata]
name = notmuch-avatar
summary = Collect the sender avatars of your email
description-file = README.md
license = Apache License (2.0)
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
keywords = notmuch-mail
author = Gonéri Le Bouder
author-email = goneri@lebouder.net
home-page = https://github.com/goneri/notmuch-avatar

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[files]
packages = avatar

[entry_points]
console_scripts =
    notmuch-avatar = avatar.main:main